# KTB4-hayes-AI

./: README.md
01/: READ.me  README.md  main.py
02/: lecture_summary.md
02/community-api/: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
02/community-api/docs/: API_SPEC.md
02/community-api/src/community_api/: database.py  main.py
02/community-api/src/community_api/controllers/: comment_controller.py  post_controller.py
02/community-api/src/community_api/models/: Comment.py  Post.py
02/community-api/src/community_api/routers/: comments.py  posts.py
02/community-api/src/community_api/schemas/: comment_schema.py  post_schema.py
03/: Weekly_Challenge.ipynb  deepdive.md  lecture_summaey.md  위클리챌린지.ipynb
04/: lecture_summary.md
05/: .gitignore  5-1.py  5-2.py  5-3.py  5-4.py  lecture_summary.md  pyproject.toml
06/: lecture_summary.md
