[project]
name = "community-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.ruff.format]
preview = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]